bk_ida/gccida/c1/c_expand_asm_operands
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/c_expand_asm_operands/src/c-typeck.c:7455:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/c_expand_asm_operands/src/c-typeck.c:7457:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/c_expand_asm_operands/src/c-typeck.c:7485:19: error: expected expression
if ( ( tree_node *)*v11 == elements ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/c_expand_asm_operands/src/c-typeck.c:7485:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*v11 == elements ) 
       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/c_expand_asm_operands/src/obj/c-typeck.o] Error 1
